# Operating_systems

./: vim.vimrc
LAB1/: lab1.cpp  lab1.py
LAB2/: lab2.cpp
LAB2/lab2/: Functions.java  Input.java  Main.java  Messages.java
LAB3/: input.txt  lab3.cpp  lab3.py  output.txt
LAB4/client/: main.cpp
LAB4/java/client/: Client.java
LAB4/java/server/: Input.java  Server.java
LAB4/server/: main.cpp
LAB5/: pom.xml  util.h
LAB5/client/: main.cpp
LAB5/cpp/: CMakeLists.txt
LAB5/java/client/: Client.java
LAB5/java/server/: HandlerClient.java  Server.java
LAB5/java/server/CRUD/: CRUD.java
LAB5/java/server/Entity/: Car.java
LAB5/resources/: hibernate.cfg.xml  queries
LAB5/server/: main.cpp
LAB6/: pom.xml
LAB6/src/main/java/: module-info.java
LAB6/src/main/java/lab4/lab4client/: Client.java  ClientController.java  SecondController.java
LAB6/src/main/java/server/: Input.java  Server.java
LAB6/src/main/resources/lab4/lab4client/: hello-view.fxml  second-view.fxml
